# wormhole-ui

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
installer/: README.md  build_icons.sh  macos.spec  macos_installer.py  windows.spec  windows_installer.nsi
installer/icons/: wormhole.icns
scripts/: run.py
tests/: pytest.ini  test_connect_dialog.py  test_dest.py  test_dest_file.py  test_file_transfer_protocol.py  test_progress.py  test_source.py  test_source_file.py  test_transit_protocol_pair.py  test_transit_protocol_receiver.py  test_transit_protocol_sender.py
tests/test_files/: file.txt
tests/test_files/subdir/: file2.txt
wormhole_ui/: dest_file.py  errors.py  file_receiver.py  file_sender.py  file_transfer_protocol.py  main.py  progress.py  timeout.py  transit_protocol.py  transit_protocol_base.py  transit_protocol_pair.py  transit_protocol_receiver.py  transit_protocol_sender.py  util.py  wormhole_controller.py  wormhole_facade.py
wormhole_ui/protocol/: __init__.py  file_transfer_protocol.py  wormhole_protocol.py
wormhole_ui/protocol/transit/: dest_file.py  file_receiver.py  file_sender.py  progress.py  source.py  transit_protocol_pair.py  transit_protocol_receiver.py  transit_protocol_sender.py
wormhole_ui/resources/: README.md
wormhole_ui/transit/: __init__.py  dest_file.py  file_receiver.py  file_sender.py  source_file.py  transit_protocol_base.py  transit_protocol_receiver.py  transit_protocol_sender.py
wormhole_ui/widgets/: connect_dialog.py  errors.py  main_window.py  message_table.py  save_file_dialog.py  shutdown_message.py  ui_dialog.py  util.py
wormhole_ui/widgets/ui/: ConnectDialog.ui  MainWindow.ui  SaveFile.ui  __init__.py
