[tool.poetry]
name = "wormhole-ui"
version = "0.2.0"
description = "UI for Magic Wormhole - get things from one computer to another safely"
authors = ["sneakypete81 <sneakypete81@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/sneakypete81/wormhole-ui"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
wormhole-ui = 'wormhole_ui.main:run'

[tool.poetry.dependencies]
python = "^3.6, <3.8"  # Some dependencies don't support Py3.8 yet
magic_wormhole = ">=0.11.2,<0.13.0"
PySide2 = "5.13.1"  # Pinned to avoid MacOS build issue https://github.com/pyinstaller/pyinstaller/issues/4627
qt5reactor = "^0.6"
humanize = "3.2.0" # Pinned to avoid MacOS build issue https://github.com/sneakypete81/wormhole-ui/issues/27
[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^2.8.1"
pytest-mock = "^3.4.0"
pytest-qt = "^3.3.0"
pytest-twisted = "^1.13"

pyinstaller = "^3.5"
pywin32-ctypes = { version = "^0.2.0", platform = "win32" }
pefile = { version = "^2019.4.18", platform = "win32" }
macholib = { version = "^1.13", platform = "darwin" }
dmgbuild = { version = "^1.3.3", platform = "darwin" }

black = { version = "^20.8b1", python = "^3.6" }
flake8 = "^3.8.4"
tox = "^3.20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
